--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
-    "@vicons/ionicons5": "^0.13.0",
-    "@vicons/utils": "^0.1.4",
     "date-fns": "^4.1.0",
     "marked": "^17.0.1",
     "pinia": "^3.0.4",
+    "tdesign-icons-vue-next": "^0.4.2",
+    "tdesign-vue-next": "^1.18.2",
     "vue": "^3.5.27",
     "vue-router": "^5.0.1"
   },
@@ -30,10 +30,8 @@
     "@vue/tsconfig": "^0.8.1",
     "biome": "^0.3.3",
     "jsdom": "^27.4.0",
-    "naive-ui": "^2.43.2",
     "npm-run-all2": "^8.0.4",
     "typescript": "~5.9.3",
-    "vfonts": "^0.0.3",
     "vite": "^7.3.1",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vitest": "^4.0.18",
